added font weight in extra task

--- a/extra.css
+++ b/extra.css
@@ -1,6 +1,7 @@
  /* ==========================================Extra-Task==================================== */
  body {
     font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
     padding: 0;
 }
 
